2006-11-28  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: (--on-change) new option.
	* log.cc, log.h: optimize Log::Format for when the message is not
	  going to be output.
	* buffer.cc, buffer.h, ftpclass.cc, ftpclass.h: (DataTranslator) new
	class; use it in DirectedBuffer; (DataRecoder) new class for charset
	conversion; use DataTranslator in IOBufferTelnet; skip 3-byte telnet
	commands; optimize buffer data movement.

2006-10-10  Alexander V. Lukyanov <lav@yars.free.net>

	* CopyJob.cc: clear and reset cp when a sub-job finishes (fixes
	  coredump in mget).

2006-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: use Delete on SMTask derivative Speedometer.
	* SMTask.cc: add debug print when deleting running task.
	* FileAccess.cc: fixed coredump when path.url is null after Change.
	* CopyJob.cc: Delete done CopyJob - fix a leak.

2006-08-29  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h, MirrorJob.cc, MirrorJob.h, resource.cc:
	  new mirror option --skip-noaccess and setting mirror:skip-noaccess.
	  (FileSet::ExcludeUnaccessible) new method.

2006-08-22  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, QueueFeeder.h, commands.cc: add settings
	  cmd:parallel and cmd:queue-parallel; backout QueueFeeder changes;
	  drop queue --parallel option.

2006-08-22  Markus Schoder <lists@gammarayburst.de>

	* CmdExec.cc, commands.cc, QueueFeeder.h: add queue --parallel option.

2006-08-22  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.h: drop MakeRef macro, it makes trouble with multiple arg evaluation.

2006-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, resource.cc: add mirror:include-regex setting.

2006-08-07  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSetOutput.cc, FileSetOutput.h, commands.cc,
	  FindJobDu.cc, FindJobDu.h: update for new human_readable; use enum
	  for long options.
	* MirrorJob.cc: use enum for long options.